[package]
name = "rust-gantt-app"
version = "0.1.0"
edition = "2021"
description = "A Gantt chart desktop application built with Rust and egui"
authors = []

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["datepicker"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.15"
csv = "1"
directories = "5"

[profile.release]
opt-level = 2
