[package]
name = "rust-gantt-app"
version = "0.1.0"
edition = "2021"
description = "A native Gantt chart desktop application built with Rust and egui"
authors = ["mhj"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hjertis/rust-gantt-app"
keywords = ["gantt", "project-management", "egui", "desktop"]
categories = ["gui"]

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["datepicker"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.15"
csv = "1"
directories = "5"
open = "5"

[profile.release]
opt-level = 2
